[package]
name = "coolcats2"
version = "0.1.0"
authors = ["Michael Goldman <mike.goldman@allstreets.org>"]
edition = "2018"
build = "build.rs"

[dependencies]
yew = "0.7.0"
yew-router = "0.1.0"
stdweb = "0.4.14"
serde = {version = "1.0.88", features = ["derive"]}
serde_json = "1.0.39"
json = "0.11.13"
strum = "0.13.0"
strum_macros = "0.13.0"
lazy_static = "1.3.0"

[patch.crates-io]
yew = {git = "https://github.com/DenisKolodin/yew"}
yew-router = {git = "https://github.com/saschagrunert/yew-router"}

[profile.release]
lto = true
opt-level = 's'
