[package]
name = "coolcats2"
version = "0.1.0"
authors = ["Michael Goldman <mike.goldman@allstreets.org>"]
edition = "2018"
build = "build.rs"

[profile.release]
lto = true
opt-level = 'z'

[dependencies]
json = "0.11.15"
lazy_static = "1.3.0"
serde = { version = "1.0.99", features = ["derive"] }
serde_json = "1.0.40"
stdweb = "0.4.18"
strum = "0.15.0"
strum_macros = "0.15.0"
yew = "0.6.0"
yew-router = "0.2.0"
