[package]
name = "coolcats-ui"
version = "0.2.0"
authors = ["Michael Goldman <mike.goldman@allstreets.org>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 's'
codegen-units = 1

[dependencies]
json = "0.11.15"
lazy_static = "1.3.0"
serde = { version = "1.0.99", features = ["derive"] }
serde_json = "1.0.40"
stdweb = "0.4.18"
strum = "0.15.0"
strum_macros = "0.15.0"
wasm-bindgen = "=0.2.42"
yew = "0.8.0"
yew-router = "0.4.0"
