[package]
name = "gabbycat"
version = "0.1.0"
authors = ["Michael Goldman <mike.goldman@allstreets.org>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
coolcats-utils = { path = "../utils" }
fluent = "0.7.1"
gabbycat-macros = { path = "macros" }
lazy_static = "1.4.0"
serde = { version = "1.0.100", features = ["derive"] }
stdweb = "0.4.18"
strum = "0.15.0"
strum_macros = "0.15.0"
unic-langid = "0.4.2"
wasm-bindgen = "=0.2.42"
yew = "0.8.0"
