[package]
name = "gabbycat"
version = "0.1.0"
authors = ["Michael Goldman <mike.goldman@allstreets.org>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
opt-level = 's'

[dependencies]
coolcats-utils = { path = "../utils" }
fluent = "0.7.1"
gabbycat-macros = { path = "macros" }
lazy_static = "1.4.0"
serde = { version = "1.0.101", features = ["derive"] }
stdweb = "0.4.18"
strum = "0.15.0"
strum_macros = "0.15.0"
unic-langid = "0.4.2"
wasm-bindgen = "=0.2.42"
yew = { version = "0.9.0", git = "https://github.com/yewstack/yew" }
