[package]
name = "wildcat-ui"
version = "0.1.0"
authors = ["Michael Goldman <mike.goldman@allstreets.org>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
opt-level = 's'

[dependencies]
coolcats-ui-shared = { path = "../shared" }
fluent = "0.7.1"
lazy_static = "1.4.0"
serde = { version = "1.0.101", features = ["derive"] }
stdweb = "0.4.18"
strum = "0.16.0"
strum_macros = "0.16.0"
unic-langid = "0.4.2"
wasm-bindgen = "=0.2.42"
wildcat-macros = { path = "macros" }
yew = "0.9.0"
