[package]
name = "wildcat-ui"
version = "0.1.0"
authors = ["Michael Goldman <mike.goldman@allstreets.org>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
coolcats-ui-shared = { path = "../shared" }
fluent = "0.8.0"
lazy_static = "1.4.0"
serde = { version = "1.0.101", features = ["derive"] }
stdweb = "0.4.20"
strum = "0.16.0"
strum_macros = "0.16.0"
titlecase = "0.10.0"
unic-langid = { version = "0.6.1", features = ["macros"] }
wasm-bindgen = "=0.2.42"
wildcat-macros = { path = "macros" }
yew = "0.9.0"
