[package]
name = "coolcats"
version = "0.2.0"
authors = ["Michael Goldman <mike.goldman@allstreets.org>"]
edition = "2018"

[dependencies]
hdk = "=0.0.49-alpha1"
hdk_proc_macros = "=0.0.49-alpha1"
holochain_json_derive = "0.0"
holochain_wasm_utils = "=0.0.49-alpha1"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"
