[package]
name = "coolcats"
version = "0.1.0"
authors = ["Michael Goldman <mike.goldman@allstreets.org>"]
edition = "2018"

[dependencies]
hdk = "0.0.20-alpha3"
holochain_core_types_derive = "0.0.20-alpha3"
holochain_wasm_utils = "0.0.20-alpha3"
serde = { version = "1.0.89", features = ["derive"] }
serde_json = "1.0.39"

[patch.crates-io]
hdk = { git = "https://github.com/holochain/holochain-rust", tag = "v0.0.20-alpha3" }
holochain_core_types_derive = { git = "https://github.com/holochain/holochain-rust", tag = "v0.0.20-alpha3" }
holochain_wasm_utils = { git = "https://github.com/holochain/holochain-rust", tag = "v0.0.20-alpha3" }

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"
