[package]
name = "coolcats"
version = "0.1.0"
authors = ["Michael Goldman <mike.goldman@allstreets.org>"]
edition = "2018"

[dependencies]
hdk = "0.0.21-alpha1"
holochain_wasm_utils = "0.0.21-alpha1"
holochain_json_derive = "=0.0.1-alpha2"
serde = { version = "1.0.89", features = ["derive"] }
serde_json = "1.0.39"

[patch.crates-io]
hdk = { git = "https://github.com/holochain/holochain-rust", tag = "v0.0.21-alpha1" }
holochain_wasm_utils = { git = "https://github.com/holochain/holochain-rust", tag = "v0.0.21-alpha1" }

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"
